--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Personal Finance Tracker</title>
+    <meta name="description" content="Track your personal finances with ease - income, expenses, and insights" />
   </head>
   <body>
     <div id="root"></div>
